--- a/.github/workflows/Pre-Mortem_Analysis_Bot.yaml
+++ b/.github/workflows/Pre-Mortem_Analysis_Bot.yaml
@@ -64,5 +64,5 @@ jobs:
           # Settings > Secrets and variables > Actions > Repository secrets
           METACULUS_TOKEN: ${{ secrets.METACULUS_TOKEN }}
           OPENROUTER_API_KEY: ${{ secrets.OPENROUTER_API_KEY }}
-          LINKUP_API_KEY: ${{ secrets.LINKUP_API_KEY }}
-          SERP_API_KEY: ${{ secrets.SERP_API_KEY }} # Corrected to match the Python script's os.getenv call
+          TAVILY_API_KEY: ${{ secrets.TAVILY_API_KEY }}
+          
