--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,5 +1,5 @@
 [tool.poetry]
-name = "pre-mortem-analysis-bot"
+name = "Yrambot"
 version = "1.0.0"
 description = "A multi-model forecasting bot using a pre-mortem analysis framework on Metaculus questions."
 authors = ["Your Name <you@example.com>"]
@@ -8,7 +8,7 @@ package-mode = false
 
 [tool.poetry.dependencies]
 python = "^3.11"
-forecasting-tools = "^0.2.54"
+forecasting_tools = "^0.2.54"
 python-dotenv = "^1.0.1"
 requests = "^2.32.3"
 newsapi-python = "^0.2.7"
